--- a/src/scss/views/CV.scss
+++ b/src/scss/views/CV.scss
@@ -1,4 +1,3 @@
 .CV {
-	width: 45rem;
 	align-self: center;
 }
