--- a/src/scss/views/View.scss
+++ b/src/scss/views/View.scss
@@ -1,3 +1,10 @@
-.View {
+.View_wrapper {
 	flex: 1;
+	display: flex;
+	justify-content: center;
+
+	.View {
+		width: 95%;
+		max-width: min(600px, 100%);
+	}
 }
